--- a/image/requirements.txt
+++ b/image/requirements.txt
@@ -1,4 +1,23 @@
-numpy==1.26.4
+# numpy==1.26.4
+# boto3>=1.34
+# psycopg2-binary>=2.9
+# crawl4ai==0.7.4
+# tiktoken==0.7.0
+# boto3>=1.34
+# psycopg2-binary>=2.9
+# crawl4ai==0.7.4
+# httpx[http2]==0.27.2
+# selectolax==0.3.21
+# trafilatura==1.8.1
+# playwright==1.46.0
+# Crawl4AI plus Playwright
+crawl4ai==0.7.4
+# playwright==1.46.0
+
+# AWS + DB (if you need them later)
 boto3>=1.34
 psycopg2-binary>=2.9
-crawl4ai
+
+# Optional: avoid wheels-from-source headaches
+numpy==1.26.4
+tiktoken==0.7.0
