Working lambda scrapping tool

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -1,60 +1,23 @@
-# base image 
-# FROM public.ecr.aws/lambda/python:3.11-al2023
+# AWS Lambda base (Amazon Linux 2023, Python 3.12)
 FROM public.ecr.aws/lambda/python:3.12
-# ENV PIP_PREFER_BINARY=1
-# RUN python -m pip install --no-cache-dir --upgrade pip setuptools wheel
-# # copy requiremen.txt
-# COPY requirements.txt ${LAMBDA_TASK_ROOT}
 
-# RUN python -m pip install --no-cache-dir -r requirements.txt
+# Optional: faster/cleaner pip installs
+ENV PIP_NO_CACHE_DIR=1 \
+    PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1
 
-# RUN python -m playwright install chromium
+# Copy and install Python deps
+COPY requirements.txt ${LAMBDA_TASK_ROOT}/
+RUN python -m pip install --upgrade pip \
+ && python -m pip install -r requirements.txt
 
-# COPY src/ ${LAMBDA_TASK_ROOT}
+# Copy your app code (assumes your handler is main.handler)
+# If your file is named differently, adjust the CMD below.
+COPY src/ ${LAMBDA_TASK_ROOT}/
 
-# CMD ["main.handler"]
-RUN dnf -y update && dnf -y install \
-    at-spi2-atk \
-    atk \
-    cups-libs \
-    dbus-libs \
-    glib2 \
-    libX11 \
-    libXcomposite \
-    libXcursor \
-    libXdamage \
-    libXext \
-    libXfixes \
-    libXi \
-    libXrandr \
-    libXScrnSaver \
-    libdrm \
-    libgbm \
-    libxkbcommon \
-    mesa-libEGL \
-    mesa-libgbm \
-    nss \
-    pango \
-    gtk3 \
-    alsa-lib \
- && dnf clean all
+# Tune HTTP client behavior (optional)
+ENV UV_HTTP2=1 \
+    HTTPX_LOG_LEVEL=WARNING
 
-ENV HOME=/tmp \
-    XDG_CACHE_HOME=/tmp/.cache \
-    XDG_DATA_HOME=/tmp/.local/share \
-    XDG_STATE_HOME=/tmp/.local/state \
-    CRAWL4AI_CACHE_DIR=/tmp/crawl4ai/cache \
-    CRAWL4AI_DB_PATH=/tmp/crawl4ai/db \
-    PLAYWRIGHT_BROWSERS_PATH=/ms-playwright
-
-COPY requirements.txt ${LAMBDA_TASK_ROOT}
-
-RUN python -m pip install --upgrade pip setuptools wheel
-
-RUN python -m pip install --no-cache-dir -r requirements.txt
-
-RUN playwright install chromium
-
-COPY src/ ${LAMBDA_TASK_ROOT}
-
+# Set the Lambda handler: <module>.<function>
 CMD ["main.handler"]
